[gd_scene load_steps=3 format=3 uid="uid://b6re03qepgedf"]

[ext_resource type="Script" path="res://GUI/PauseMenu/PauseMenu.gd" id="1_mq2fp"]
[ext_resource type="PackedScene" uid="uid://dntf3xtche2ul" path="res://GUI/MenuClasses/MenuTab.tscn" id="2_oafrt"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mq2fp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.376471, 0.164706, 0.152941, 0.596078)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_constants/margin_top = 60

[node name="PauseLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "PAUSED
"
horizontal_alignment = 1

[node name="MenuSelection" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -140.0
offset_right = 210.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.01318)

[node name="MenuBars" type="MarginContainer" parent="MenuSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuItems" type="VBoxContainer" parent="MenuSelection/MenuBars"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Resume" parent="MenuSelection/MenuBars/PauseMenuItems" instance=ExtResource("2_oafrt")]
layout_mode = 2
size_flags_vertical = 3

[node name="Main Menu" parent="MenuSelection/MenuBars/PauseMenuItems" instance=ExtResource("2_oafrt")]
layout_mode = 2
size_flags_vertical = 3

[node name="Quit" parent="MenuSelection/MenuBars/PauseMenuItems" instance=ExtResource("2_oafrt")]
layout_mode = 2
size_flags_vertical = 3
